// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`containers/Search/Table/index when has results renders table with rows 1`] = `
<div>
  <div>
    <table>
      <tbody>
        <tr>
          <td>
            package-1
          </td>
        </tr>
        <tr>
          <td>
            package-2
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`containers/Search/Table/index when no results renders empty slot for empty state 1`] = `
<div>
  <div>
    No results
  </div>
</div>
`;

exports[`containers/Search/Table/index when no results renders error for InputError data fail state 1`] = `
<div>
  <section>
    <h1>
      Unexpected error
    </h1>
    <details>
      Invalid input at 
      <code />
      : 
      <pre
        style="white-space: pre-wrap;"
      >
        We can not handle this input
      </pre>
    </details>
  </section>
</div>
`;

exports[`containers/Search/Table/index when no results renders error for QuerySyntaxError data fail state 1`] = `
<div>
  <section>
    <h1>
      Syntax error
    </h1>
    <details>
      Invalid input at 
      <code>
        search.query
      </code>
      : 
      QuerySyntaxError
      <pre
        style="white-space: pre-wrap;"
      >
        Syntax error in query
      </pre>
    </details>
  </section>
</div>
`;

exports[`containers/Search/Table/index when no results renders error for general fail state 1`] = `
<div>
  <section>
    <h1>
      Unexpected error
    </h1>
    <details>
      Something went wrong
    </details>
  </section>
</div>
`;

exports[`containers/Search/Table/index when no results renders error for page fail state 1`] = `
<div>
  <section>
    <h1>
      Unexpected error
    </h1>
    <details>
      Page loading failed
    </details>
  </section>
</div>
`;

exports[`containers/Search/Table/index when no results renders null for idle state 1`] = `<div />`;

exports[`containers/Search/Table/index when no results renders operation error for other OperationError data fail state 1`] = `
<div>
  <section>
    <h1>
      Unexpected error
    </h1>
    <details>
      Operation error: 
      Internal server error
    </details>
  </section>
</div>
`;

exports[`containers/Search/Table/index when no results renders skeleton for in-progress state 1`] = `
<div>
  <div>
    Loading…
  </div>
</div>
`;

exports[`containers/Search/Table/index when no results renders timeout error for OperationError data fail state 1`] = `
<div>
  <section>
    <h1>
      Timeout error
    </h1>
    <details />
  </section>
</div>
`;
